--- a/style.css
+++ b/style.css
@@ -99,15 +99,13 @@ progress[value]::-webkit-progress-value {
 	background-color: #00BFFF;
 }
 
-
-
-
-
 #stage{background:#eee;width:200px;height:100px;overflow:hidden;
 	position:relative;margin:2em 0;}
 #stage span{font-size:20px;color:#666;display:block;padding:2em;}
-/* video{width:400px;height:300px;position:absolute;top:0;left:0;} */
-/* #controls{position:relative;width:400px;} */
-/* #change{position:absolute;right:-100px;top:-300px;width:100px;} */
-/* button{font-size:150%;text-align:center;display:block;} */
-/* #change button{width:60px;border:none;background:#fff;} */
+
+/* New CSS class for modern frame */
+.video-frame {
+  border: 2px solid #00BFFF;
+  padding: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
